--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Home/Index.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Home/Index.cshtml
@@ -25,24 +25,18 @@
 
     var resultado =@Html.Raw(Json.Encode(ViewBag.resultado));
 
-
     var locations = [];
 
-    $.each(resultado, function(k,v){
+    $.each(userInfo, function(k,v){
 
         if(v.geoData != null){
             var geo = v.geoData.split('|');
-            locations.push({ lat: Number(geo[0]), lng: Number(geo[1]) });
+            locations.push([ '<b>'+v.nombre +'</b><br /><a href="/Producto/Detalle?idProductor='+v.rut+'">Comprar</a>', Number(geo[0]), Number(geo[1]) ]);
         }
 
     });
 
     $(document).ready(function(){
-
-
-
-
-
         $("#usuarios").html('<option value="0">- Usuario -</option>');
 
         $.each(userInfo, function(k,v){
@@ -50,49 +44,39 @@
         });
 
         $(".selectFiltro").change(function(){
-
-
             var usr = $( "#usuarios option:selected" ).val();
             var tipo = $( "#tipoProd option:selected" ).val();
             window.location.href = '/?idUsr='+usr+'&tipoProd='+tipo;
-
         });
-
-
     });
-
-
-
-
-
-
-
 
     function initMap() {
         var uluru = { lat: -33.4454986, lng: -70.6563166 };
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 12,
-            center: uluru
+            center: uluru,
         });
 
-        var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+        var infowindow = new google.maps.InfoWindow();
 
-        var markers = locations.map(function (location, i) {
-            return new google.maps.Marker({
-                position: location,
-                label: labels[i % labels.length]
-            });
-        });
+        var marker, i;
 
-        var markerCluster = new MarkerClusterer(map, markers,
-          {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+        for (i = 0; i < locations.length; i++) {
+          marker = new google.maps.Marker({
+            position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            map: map
+          });
 
-
-        //var marker = new google.maps.Marker({
-        //  position: uluru,
-        //  map: map
-        //});
+          google.maps.event.addListener(marker, 'click', (function(marker, i) {
+            return function() {
+              infowindow.setContent(locations[i][0]);
+              infowindow.open(map, marker);
+            }
+          })(marker, i));
+        }
     }
+
+
 </script>
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcVi-tXgBUCUmbdt6RI-Rw__U9QCfP220&callback=initMap">
