--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Layout.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
 
 
                                 <li><a href="~/cart.html"><i class="fa fa-shopping-cart"></i> Carrito <span class="badge">@cantidad</span></a></li>
-                                <li><a href="~/login.html"><i class="fa fa-lock"></i> Ingresar</a></li>
+                                <li><a href="/Login/Salir"><i class="fa fa-lock"></i> Salir</a></li>
                             </ul>
                         </div>
                     </div>
