--- a/Feria Desktop/Feria Desktop/View/Comun/Login.xaml
+++ b/Feria Desktop/Feria Desktop/View/Comun/Login.xaml
@@ -1,24 +1,20 @@
 ﻿<Window x:Class="Feria_Desktop.View.Comun.Login" WindowStartupLocation="CenterScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="" Height="300" Width="500">
+        ResizeMode="NoResize"
+        Title="Feria de Frutos Frescos" Height="300" Width="500">
     <Grid>
-       
+        <Grid.Background>
+            <ImageBrush ImageSource="{DynamicResource ImagenFondo}" />
+        </Grid.Background>
         <Label Content="Ingrese sus datos" HorizontalAlignment="Left" Margin="140,33,0,0" VerticalAlignment="Top" FontSize="24" FontFamily="Arial Unicode MS"/>
         <Label Content="Usuario" HorizontalAlignment="Left" Margin="67,88,0,0" VerticalAlignment="Top" FontSize="18"/>
         <Label Content="Contraseña" HorizontalAlignment="Left" Margin="38,141,0,0" VerticalAlignment="Top" FontSize="18"/>
         <TextBox Name="txb_usuario" HorizontalAlignment="Left" Height="34" Margin="157,88,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="231" FontSize="16"/>
         <PasswordBox Name="txb_password" HorizontalAlignment="Left" Height="34" Margin="157,141,0,0"  VerticalAlignment="Top" Width="231" FontSize="16"/>
-        <TextBlock Name="blq_error" HorizontalAlignment="Left" Margin="157,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" OpacityMask="AntiqueWhite" Foreground="AntiqueWhite"/>
-        <Button Name="btn_entrar" Content="Entrar" HorizontalAlignment="Left" Margin="338,208,0,0" VerticalAlignment="Top" Width="75" Click="btn_entrar_Click">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="#FF53E8D4" Offset="0"/>
-                    <GradientStop Color="#FF8DEC9A" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-       
+        <TextBlock Name="blq_error" HorizontalAlignment="Left" Margin="157,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" OpacityMask="Red" Foreground="Red"/>
+        <Button Name="btn_entrar" Content="Entrar" HorizontalAlignment="Left" Margin="338,208,0,0" VerticalAlignment="Top" Width="75" Click="btn_entrar_Click" />
+
 
 
     </Grid>
