--- a/Feria Desktop/Feria Desktop/View/Comun/MainWindow.xaml
+++ b/Feria Desktop/Feria Desktop/View/Comun/MainWindow.xaml
@@ -1,8 +1,21 @@
 ﻿<Window x:Class="Feria_Desktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Feria de Frutos Frescos" Height="500" Width="900"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Menu HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Cursor="Hand" Width="894">
+            <MenuItem Name="Inicio" Header="Inicio   " Click="btnInicio_Click" BorderThickness="0,0,2,0"/>
+            <MenuItem Name="Productos" Header="Productos   " Click="btnProductos_Click" BorderThickness="0,0,2,0"/>
+            <MenuItem Name="Usuarios" Header="Usuarios   " Click="btnUsuarios_Click" BorderThickness="0,0,2,0"/>
+            <MenuItem Name="Mantenedores" Header="Mantenedores   "  BorderThickness="0,0,2,0">
+                <MenuItem Name="ManTipoProd" Header="Tipo Producto" Click="btnManTipoProd_Click" BorderThickness="0,0,2,0"/>
+                <MenuItem Name="ManTipoUsuario" Header="Tipo usuario" Click="btnManTipoUsu_Click" BorderThickness="0,0,2,0"/>
+                <MenuItem Name="ManBodega" Header="Bodega" Click="btnManBodega_Click" BorderThickness="0,0,2,0"/>
+            </MenuItem>
+        </Menu>
+        <Frame Name="FramePrincipal" Content="" HorizontalAlignment="Left" Height="437" Margin="0,23,0,0" VerticalAlignment="Top" Width="894" NavigationUIVisibility="Hidden" Source="Inicio.xaml"/>
+
     </Grid>
 </Window>
