Cambios aplicacion WEB

--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Login/Index.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Login/Index.cshtml
@@ -92,11 +92,10 @@
                                 <li><a href="index.html">Inicio</a></li>
                                 <li class="dropdown">
                                     <a href="#">Tienda<i class="fa fa-angle-down"></i></a>
-                                    <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.html">Productos</a></li>
-                                        <li><a href="product-details.html">Product Details</a></li>
-                                        <li><a href="checkout.html">Comprar</a></li>
-                                        <li><a href="cart.html">Carrito</a></li>
+                                    <ul role="menu" class="sub-menu">                                        
+                                        
+                                        
+                                        <li><a href="/Carrito">Carrito</a></li>
                                     </ul>
                                 </li>
                                
