--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Menu_Categoria.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Menu_Categoria.cshtml
@@ -9,15 +9,10 @@
                 <div class="panel-heading">
                     <h4 class="panel-title"><a href="#">Cuenta</a></h4>
                 </div>
-            </div>
+            </div>            
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a href="#">Pagar</a></h4>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title"><a href="#">Carrito</a></h4>
+                    <h4 class="panel-title"><a href="/Carrito">Carrito</a></h4>
                 </div>
             </div>
             <div class="panel panel-default">
