--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Carrito/Index.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Carrito/Index.cshtml
@@ -1,17 +1,59 @@
 ﻿<div class="col-sm-9 padding-right">
 
-    <table id="tabla-carrito">
+    <h2 class="title text-center">Carrito</h2>
+    <table class="table" id="tabla-carrito">
         <thead>
             <tr>
 
                 <th>Nombre producto</th>
                 <th>Cantidad</th>
                 <th>Total</th>
+                <th>Acción</th>
             </tr>
         </thead>
         <tbody></tbody>
     </table>
 
+    <buton type="button" id="btn-pagar" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#pago">
+        Comprar
+    </buton>
+    
+
+    <div class="modal fade" id="pago" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Pago en línea</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-12">
+                                <table>
+                                    <tr>
+                                        <td>Banco</td>
+                                        <td><select>
+                                                <option>Banco estado</option>
+                                                <option>Banco Scotiabank</option>
+                                            </select>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Monto</td>
+                                        <td style="text-align: right"><span class="total-compra"></span></td>
+                                    </tr>
+                                </table>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary"><a href="/Carrito/Comprar">Pagar</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 
@@ -23,15 +65,34 @@
 
     var carrito = @Html.Raw(Json.Encode(ViewBag.carrito));
 
-
+    var total = 0;
 
 
     $(document).ready(function(){
-
         cargaTabla();
-     
 
+       // $('#pago').modal();
 
+        $(".btn-eliminar").on('click', function(){
+            var fila = $(this).parents("tr");
+            var idDet = fila.attr("id-detalle");
+
+            $.get( "/Carrito/Eliminar", {idDeta : idDet}, function(data){
+                window.location.reload();
+            });
+        });
+
+        $("#btn-pagar").on('click', function(){  
+            
+            //alert("asdfsdf");
+            //$('#pago').modal('show');            
+            var asd = 0;
+            $.each(carrito, function(k,v){
+                asd += v.total;                           
+            });
+
+            $(".total-compra").html("$ "+asd);
+        });
     });
 
 
@@ -44,7 +105,7 @@
 
         $.each(carrito, function(k,v){
 
-            var fila = "<tr class='fila-carrito' id-producto='"+ v.idProducto+"'><td>Aca va el nombre del producto</td><td>"+ v.cantidad +"</td><td>Aca va el total</td></tr>";
+            var fila = "<tr class='fila-carrito' id-detalle='"+v.idDetalle+"' id-producto='"+ v.idProducto+"'><td>"+ v.nombreProducto+"</td><td>"+ v.cantidad +"</td><td>"+ v.total+"</td><td><span class='btn btn-default btn-eliminar'>Eliminar</span></td></tr>";
 
             $("#tabla-carrito tbody").append(fila);
 
@@ -56,6 +117,4 @@
 
 
 </script>
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcVi-tXgBUCUmbdt6RI-Rw__U9QCfP220&callback=initMap">
-</script>
+
