--- a/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Menu_Superior.cshtml
+++ b/Aplicacion Web/AppWeb_FrutosFrescos/AppWeb_FrutosFrescos/Views/Shared/_Menu_Superior.cshtml
@@ -12,14 +12,14 @@
 
             <div class="mainmenu pull-left">
                 <ul class="nav navbar-nav collapse navbar-collapse">
-                    <li><a href="index.html" class="active">Inicio</a></li>
+                    <li><a href="/" class="active">Inicio</a></li>
                     <li class="dropdown">
                         <a href="#">Tienda<i class="fa fa-angle-down"></i></a>
                         <ul role="menu" class="sub-menu">
                             <li><a href="shop.html">Productos</a></li>
                             <li><a href="product-details.html">Detalles (para ejemplo)</a></li>
                             <li><a href="checkout.html">Pagar</a></li>
-                            <li><a href="cart.html">Carrito</a></li>
+                            <li><a href="/Carrito">Carrito</a></li>
                             <li><a href="login.html">Ingreso (ejemplo)</a></li>
                         </ul>
                     </li>
